fix: render service issue

--- a/render.yaml
+++ b/render.yaml
@@ -9,13 +9,13 @@ services:
     region: oregon
     plan: free
     rootDir: libslmgen
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
-      - key: PYTHON_VERSION
-        value: "3.11"
       - key: ALLOWED_ORIGINS
         value: https://slmgen.vercel.app,http://localhost:3000
+      - key: UPLOAD_DIR
+        value: /tmp/uploads
       - key: SUPABASE_URL
         sync: false  # Set manually in dashboard
       - key: SUPABASE_ANON_KEY
