--- a/slmgenui/package.json
+++ b/slmgenui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^12.27.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
