--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,11 @@
-# Railway Nixpacks Configuration
+# Railway Nixpacks Configuration for SLMGEN
+# The Python app is in the libslmgen/ subdirectory
+
 [phases.setup]
-nixPkgs = ["python313"]
+nixPkgs = ["python313", "pip"]
 
 [phases.install]
 cmds = ["cd libslmgen && pip install -r requirements.txt"]
 
 [start]
-cmd = "cd libslmgen && uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "cd libslmgen && python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
