feat: Implement API rate limiting and enhance session security with ownership checks and JWKS caching.

--- a/libslmgen/requirements.txt
+++ b/libslmgen/requirements.txt
@@ -17,6 +17,11 @@ aiofiles>=23.2.1
 # Supabase
 supabase>=2.0.0
 python-jose[cryptography]>=3.3.0
+requests>=2.31.0
+
+# Security & Rate Limiting
+slowapi>=0.1.9
+cachetools>=5.3.0
 
 # Testing (optional)
 pytest>=7.4.0
